fix spacing sidebar and content

--- a/assets/css/Products/responsive.css
+++ b/assets/css/Products/responsive.css
@@ -109,6 +109,11 @@
         max-width: 50%;
     }
 
+    .m-8 {
+        flex: 0 0 66.66667%;
+        max-width: 66.66667%;
+    }
+
     .m-4 {
         flex: 0 0 33.33%;
         max-width: 33.33%;
